force-app/main/default/objects/Dummy25__c/Dummy25__c.object-meta.xml
<CustomObject>
    <label>Dummy25</label>
    <nameField>
        <label>Dummy25 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dummy25</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>