force-app/main/default/objects/Dummy25__c/fields/FooBar009__c.field-meta.xml
<CustomField>
    <fullName>FooBar009__c</fullName>
    <label>FooBar009</label>
    <length>255</length>
    <type>Text</type>
</CustomField>