force-app/main/default/objects/Dummy25__c/fields/FooBar057__c.field-meta.xml
<CustomField>
    <fullName>FooBar057__c</fullName>
    <label>FooBar057</label>
    <length>255</length>
    <type>Text</type>
</CustomField>