force-app/main/default/objects/Dummy25__c/fields/FooBar059__c.field-meta.xml
<CustomField>
    <fullName>FooBar059__c</fullName>
    <label>FooBar059</label>
    <length>255</length>
    <type>Text</type>
</CustomField>